# backend/src/modules/tweet/controller/tweets.js
@@ -241,3 +241,25 @@ exports.likeTweet = async (req, res) => {
       .send(error.message)
   }
 }
+
+exports.searchByHashTag = async (req, res) => {
+  try {
+    let result = await Tweets.find({
+      originalBody: { $regex: req.body.keyword, $options: "i" },
+    })
+
+    let resultObject = {
+      count: result.length,
+      data: result
+    }
+    
+    return res
+      .status(constants.STATUS_CODE.SUCCESS_STATUS)
+      .json(resultObject)
+  } catch(error) {
+    console.log(`error while searching by Hashtag ${error}`)
+    return res
+      .status(constants.STATUS_CODE.INTERNAL_SERVER_ERROR_STATUS)
+      .send(error.message)
+  }
+}
